@@ -289,7 +289,7 @@ Alexander Alexiou (Santi)
 title = _ "Hebrew Translation"
 text = "
 Oron Peled
-Ely Levy
+Ely Levy (Nakee)
 "
 [/about]
 
@@ -467,6 +467,7 @@ Jeff Breidenbach (jab)
 Laurent Birtz
 Rocco J Carello (rogue)
 Tomasz Sikorski (Tomsik)
+Ely Levy (Nakee)
 "
 [/about]
 
